# CG_FinalProject_Cmake

./: CMakeLists.txt  Camera.cpp  README.md  glad.c  hw7_main.cpp  loadModel.cpp  task1.cpp  task2.cpp
include/: Camera.h  ModelShader.h  Modelcamera.h  Shader.h  mesh.h  model.h  resource.h
include/glad/: glad.h
lib/: assimpd.lib  glfw3.lib  glfw3_origin.lib
res/: hw7_shadow_map.fs  skyShader.fs  skyShader.vs  task6_fraShader_lamp.txt  task6_verShader_lamp.txt
res/YHY_JZ_DGM_05_LST_YSZND/: YHY_JZ_DGM_05_LST_YSZND.mtl
